<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1">
  <name>GDML workbench</name>
  <description>An external workbench for creating GDML models for Geant4 and Root>
  <version>1.8 Beta</version>
  <maintainer email="keith@sloan-home.co.uk">Keith Sloan</maintainer>
  <license file="LICENSE">LGPL-2.1</license>
  <url type="repository" branch="master">https://github.com/KeithSloan/GDML.git</url>
  <url type="repository" branch="beta1">https://github.com/KeithSloan/GDML.git</url>
  <url type="documentation">https://github.com/KeithSloan/GDML/wiki</url>

  <content>
    <workbench>
      <name>GDML workbench</name>
      <classname>GDMLWorkbench</classname>
      <description>A workbench for creating GDML models for Geant4 & ROOT.</description>
      <version>1.8 Beta</version>
      <subdirectory>./</subdirectory>
      <icon>freecad/gdml/Resources/icons/GDMLWorkbench.svg</icon>
      <freecadmin>0.19.3</freecadmin>
      <depend>lxml</depend>
      <depend>gmsh</depend>
    </workbench>
  </content>

</package>
